<resources>
    <string name="app_name">registro axa</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyC0vRj7MEPeIL_iIIDz3yRghgNzHwcDR2I</string>

    <!-- Textos Registro-->
    <string name="titile_registro">Registro Poliza</string>

    <string name="cedula">Cedula Tomador</string>
    <string name="hint_cedula">Ingrese cedula</string>

    <string name="nombre">Nombres Tomador</string>
    <string name="hint_nombre">Ingrese nombres</string>

    <string name="apellido">Apellidos Tomador</string>
    <string name="hint_apellidos">Ingrese apellidos</string>

    <string name="imagen">Foto</string>
    <string name="hint_imagen">Agregue su foto</string>


    <string name="ciudad">Ciudad</string>
    <string name="hint_ciudad">Agregue su ciudad</string>

    <string name="fecha_vencimiento">Fecha de vencimiento SOAT</string>
    <string name="hint_fecha_vencimiento">Ingrese vencimiento SOAT</string>

    <string name="residencia">Ubicación residencia</string>
    <string name="hint_residencia">Seleccione su residencia del mapa</string>

    <string name="matricula">Matricula</string>
    <string name="hint_matriula1">ABC</string>
    <string name="hint_matriula2">###</string>

    <string name="btn_guardar">GUARDAR</string>

    <!-- Textos Mapa-->

    <string name="btn_confirmar">CONFIRMAR UBICACIÓN</string>


    <!-- Textos Comprar-->
    <string name="btn_comprar">COMPRAR</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
